updating sushi and flex

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         <div class="main-stage">
             <div id="plate">
-                <div class="inside">
+                <div class="inside grid-selection">
 
                 </div>
             </div>
