--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
               <span class="nav-title">Flex</span>
                
             <div class="grid">
-
+                <div>
+                      <label for="points">Grid Columns :</label>
+                    <input type="number" id="gridColumns" name="points" step="1" min="3" max ="7" value="5">
+                </div>
             </div>
         </div>
         <div class="main-stage">
