--- a/index.html
+++ b/index.html
@@ -24,11 +24,14 @@
               </label>
               <span class="nav-title">Flex</span>
                
-            <div class="grid">
+            <div class="grid-features">
                 <div>
-                      <label for="points">Grid Columns :</label>
+                      <label for="points">grid-template-columns :</label>
                     <input type="number" id="gridColumns" name="points" step="1" min="3" max ="7" value="5">
                 </div>
+            </div>
+            <div class="flex-features">
+                Flex
             </div>
         </div>
         <div class="main-stage">
