--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div id="navigation">
            <span class="nav-title"> Grid </span>
             <label class="switch">
-                <input type="checkbox" id="switch">
+                <input type="checkbox" id="switchSelection">
                 <span class="slider round"></span>
               </label>
               <span class="nav-title">Flex</span>
@@ -31,7 +31,14 @@
                 </div>
             </div>
             <div class="flex-features">
-                Flex
+               
+                <span class="slider-label">  Direction : Row </span>
+            <label class="switch">
+                <input type="checkbox" id="switch-flex-direction">
+                <span class="slider round"></span>
+              </label>
+              <span class="slider-label">Column</span>
+
             </div>
         </div>
         <div class="main-stage">
